--- a/StoresDollar/templates/index.html
+++ b/StoresDollar/templates/index.html
@@ -4,6 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="stylesheet" href="https://use.typekit.net/fwf7daa.css">
+  <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="../static/css/d3style.css">
+  <link rel="stylesheet" type="text/css" href="../static/css/style.css">
+
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Project 3</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -11,12 +17,22 @@
 
 <body>
 
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <a class="navbar-brand" href="index.html">Obesity Data Analysis</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+    </button>
+  </nav>
+
   <div class="container">
-    <div class="row">
-      <div class="col-md-12 jumbotron text-center">
-        <h1>Project 3 Skeleton</h1>
-      </div>
-    </div>
+
+    <br>
+    <br>
+    <h2>Project 3 Skeleton</h2>
+    <p>jfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdfoijasoioijf osifj osoijosidjfoijoijdsoijosdfudies on the subjfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdfjfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdf jfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdfjfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdf.</p>
+    <p>jfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdfoijasoioijf osifj osoijosidjfoijoijdsoijosdfudies on the subjfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdfjfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdf jfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdfjfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdf.</p>
+    <p>jfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdfoijasoioijf osifj osoijosidjfoijoijdsoijosdfudies on the subjfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdfjfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdf jfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdfjfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdf.</p>
+    <br>
+    <br>
     
     <div class="row">
       <div class="col-md-2">
@@ -24,5 +40,10 @@
       </div>
   </div>  
 </body>
+
+<footer>
+    <p style="font-size:.75em; color:#808080; text-align: center">Design & Developed by Bic Vu, Monica L. and Carol Fogel, 2019.</p>
+    <br>
+</footer>
 
 </html>
