--- a/StoresDollar/templates/index.html
+++ b/StoresDollar/templates/index.html
@@ -19,7 +19,8 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <a class="navbar-brand" href="index.html">Dollar Store vs Grocery Store Growth</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
+      aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
     </button>
   </nav>
 
@@ -27,38 +28,90 @@
 
     <br>
     <br>
-    <p>jfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdfoijasoioijf osifj osoijosidjfoijoijdsoijosdfudies on the subjfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdfjfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdf jfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdfjfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdf.</p>
-    <p>jfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdfoijasoioijf osifj osoijosidjfoijoijdsoijosdfudies on the subjfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdfjfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdf jfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdfjfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdf.</p>
-    <p>jfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdfoijasoioijf osifj osoijosidjfoijoijdsoijosdfudies on the subjfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdfjfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdf jfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdfjfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdf.</p>
+    <p>jfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdfoijasoioijf osifj osoijosidjfoijoijdsoijosdfudies
+      on the subjfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdfjfsjoif joifj soaf oijasoioijf osifj
+      osoijosidjfoijoijdsoijosdf jfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdfjfsjoif joifj soaf
+      oijasoioijf osifj osoijosidjfoijoijdsoijosdf.</p>
+    <p>jfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdfoijasoioijf osifj osoijosidjfoijoijdsoijosdfudies
+      on the subjfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdfjfsjoif joifj soaf oijasoioijf osifj
+      osoijosidjfoijoijdsoijosdf jfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdfjfsjoif joifj soaf
+      oijasoioijf osifj osoijosidjfoijoijdsoijosdf.</p>
+    <p>jfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdfoijasoioijf osifj osoijosidjfoijoijdsoijosdfudies
+      on the subjfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdfjfsjoif joifj soaf oijasoioijf osifj
+      osoijosidjfoijoijdsoijosdf jfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdfjfsjoif joifj soaf
+      oijasoioijf osifj osoijosidjfoijoijdsoijosdf.</p>
     <br>
     <br>
-    
+
     <div class="row">
+      <div class="col-md-1"></div>
       <div class="col-md-10">
-          <div class='tableauPlaceholder' id='viz1565658636814' style='position: relative'><noscript>
-            <a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;FD&#47;FD_v1&#47;Sheet1&#47;1_rss.png' style='border: none' />
-            </a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
-              <param name='embed_code_version' value='3' /> <param name='site_root' value='' />
-              <param name='name' value='FD_v1&#47;Sheet1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' />
-              <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;FD&#47;FD_v1&#47;Sheet1&#47;1.png' /> 
-              <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' />
-              <param name='display_overlay' value='yes' /><param name='display_count' value='yes' /></object>
-          </div>                
-          <script type='text/javascript'> 
-            var divElement = document.getElementById('viz1565658636814');                    
-            var vizElement = divElement.getElementsByTagName('object')[0];                    
-            vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                   
-            var scriptElement = document.createElement('script');                    
-            scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
-            vizElement.parentNode.insertBefore(scriptElement, vizElement);                
-          </script>
+        <div class='tableauPlaceholder' id='viz1565658636814' style='position: relative'><noscript>
+            <a href='#'><img alt=' '
+                src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;FD&#47;FD_v1&#47;Sheet1&#47;1_rss.png'
+                style='border: none' />
+            </a></noscript><object class='tableauViz' style='display:none;'>
+            <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+            <param name='embed_code_version' value='3' />
+            <param name='site_root' value='' />
+            <param name='name' value='FD_v1&#47;Sheet1' />
+            <param name='tabs' value='no' />
+            <param name='toolbar' value='yes' />
+            <param name='static_image'
+              value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;FD&#47;FD_v1&#47;Sheet1&#47;1.png' />
+            <param name='animate_transition' value='yes' />
+            <param name='display_static_image' value='yes' />
+            <param name='display_spinner' value='yes' />
+            <param name='display_overlay' value='yes' />
+            <param name='display_count' value='yes' /></object>
+        </div>
+        <script type='text/javascript'>
+          var divElement = document.getElementById('viz1565658636814');
+          var vizElement = divElement.getElementsByTagName('object')[0];
+          vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
+          var scriptElement = document.createElement('script');
+          scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+          vizElement.parentNode.insertBefore(scriptElement, vizElement);                
+        </script>
       </div>
-  </div>  
+      <div class="col-md-1"></div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-1"></div>
+      <div class="col-md-10">
+        <div class='tableauPlaceholder' id='viz1565658785362' style='position: relative'><noscript><a href='#'><img
+                alt=' '
+                src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;FD&#47;FD_v1&#47;Sheet2&#47;1_rss.png'
+                style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
+            <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+            <param name='embed_code_version' value='3' />
+            <param name='site_root' value='' />
+            <param name='name' value='FD_v1&#47;Sheet2' />
+            <param name='tabs' value='no' />
+            <param name='toolbar' value='yes' />
+            <param name='static_image'
+              value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;FD&#47;FD_v1&#47;Sheet2&#47;1.png' />
+            <param name='animate_transition' value='yes' />
+            <param name='display_static_image' value='yes' />
+            <param name='display_spinner' value='yes' />
+            <param name='display_overlay' value='yes' />
+            <param name='display_count' value='yes' /></object></div>
+        <script type='text/javascript'>
+          var divElement = document.getElementById('viz1565658785362');
+          var vizElement = divElement.getElementsByTagName('object')[0]; vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
+          var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+          vizElement.parentNode.insertBefore(scriptElement, vizElement); 
+        </script>
+      </div>
+      <div class="col-md-1"></div>
+    </div>
 </body>
 
 <footer>
-    <p style="font-size:.75em; color:#808080; text-align: center">Design & Developed by Bic Vu, Monica L. and Carol Fogel, 2019.</p>
-    <br>
+  <p style="font-size:.75em; color:#808080; text-align: center">Design & Developed by Bic Vu, Monica L. and Carol Fogel,
+    2019.</p>
+  <br>
 </footer>
 
 </html>
