--- a/StoresDollar/templates/index.html
+++ b/StoresDollar/templates/index.html
@@ -28,20 +28,27 @@
 
     <br>
     <br>
-    <p>jfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdfoijasoioijf osifj osoijosidjfoijoijdsoijosdfudies
-      on the subjfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdfjfsjoif joifj soaf oijasoioijf osifj
-      osoijosidjfoijoijdsoijosdf jfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdfjfsjoif joifj soaf
-      oijasoioijf osifj osoijosidjfoijoijdsoijosdf.</p>
-    <p>jfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdfoijasoioijf osifj osoijosidjfoijoijdsoijosdfudies
-      on the subjfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdfjfsjoif joifj soaf oijasoioijf osifj
-      osoijosidjfoijoijdsoijosdf jfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdfjfsjoif joifj soaf
-      oijasoioijf osifj osoijosidjfoijoijdsoijosdf.</p>
-    <p>jfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdfoijasoioijf osifj osoijosidjfoijoijdsoijosdfudies
-      on the subjfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdfjfsjoif joifj soaf oijasoioijf osifj
-      osoijosidjfoijoijdsoijosdf jfsjoif joifj soaf oijasoioijf osifj osoijosidjfoijoijdsoijosdfjfsjoif joifj soaf
-      oijasoioijf osifj osoijosidjfoijoijdsoijosdf.</p>
+    <p>Low income areas which lack easy access to grocery stores are referred to as 'Food Deserts'. The USDA defines
+      food deserts as parts of the country that lack
+      healthy food, such as fresh fruit and vegetables. These areas are typically impoverished and have a lack of
+      grocery stores, farmers' markets and
+      healthy food providers. Approximately 23.5 million Americans live in food deserts. </p>
+    <p>The Institute for Local Self-Reliance's (ILSR) released a report in 2018 discussing how dollar stores are
+      targeting rural and and low-income neighborhoods
+      that satisy the characteristics of food deserts. This raises concerns because although dollar stores typically
+      sell milk and eggs, they do not sell fresh fruits or vegetables, or other nutrionally-dense food products. 
+      "This influx of dollar stores, according to the Oklahoma City city council, is a major public-health problem".
+      "While many factors influence what stores come and go in a neighborhood, research shows that convenience stores
+      persist where poverty does. Spelman College sociologist Ashanté Reese has also shown that food access aligns with
+      historical patterns of racial segregation. In low-income neighborhoods—and even more so in those that are
+      predominantly black—researchers have found that the number of convenience stores increases with poverty, while
+      supermarket availability decreases."
+      https://psmag.com/social-justice/to-save-a-neighborhood-ban-a-dollar-store</p>
     <br>
     <br>
+
+    <p>This map's color scheme displays the percentage of people, by county, living in food deserts. 
+      The darkest color represents the largest number of people living in food deserts. </p>
 
     <div class="row">
       <div class="col-md-1"></div>
@@ -77,6 +84,8 @@
       <div class="col-md-1"></div>
     </div>
 
+    <p>The map, below, illustrates the number of dollar stores nationwide.   </p>
+
     <div class="row">
       <div class="col-md-1"></div>
       <div class="col-md-10">
@@ -106,6 +115,11 @@
       </div>
       <div class="col-md-1"></div>
     </div>
+
+    <p>Urban / Rural areas  ojadso fj  jfoisj aiomjsjfoi sjfopsjpo fspojfpo sposj fpjspdofjspoj fpsjpojdspofspofjpsojfposjpofjsfsd
+        ojadso fj  jfoisj aiomjsjfoi sjfopsjpo fspojfpo sposj fpjspdofjspoj fpsjpojdspofspofjpsojfposjpofjsfsdojadso fj  jfoisj aiomjsjfoi sjfopsjpo fspojfpo sposj fpjspdofjspoj fpsjpojdspofspofjpsojfposjpofjsfsd
+        ojadso fj  jfoisj aiomjsjfoi sjfopsjpo fspojfpo sposj fpjspdofjspoj fpsjpojdspofspofjpsojfposjpofjsfsd
+    </p>
 
     <div class="row">
       <div class="col-md-1"> </div>
@@ -140,7 +154,8 @@
 </body>
 
 <footer>
-  <p style="font-size:.75em; color:#808080; text-align: center">Design & Developed by Bic Vu, Monica L. and Carol Fogel,
+  <p style="font-size:.75em; color:#808080; text-align: center">Design & Developed by Bic Vu, Monica L., and Carol
+    Fogel,
     2019.</p>
   <br>
 </footer>
