--- a/StoresDollar/templates/index.html
+++ b/StoresDollar/templates/index.html
@@ -18,36 +18,58 @@
 <body>
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="index.html">Dollar Store vs Grocery Store Growth</a>
+    <a class="navbar-brand" href="index.html">Food Deserts Across the United States - Dollar Stores vs Grocery
+      Stores</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
       aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
     </button>
   </nav>
 
+  <br>
+  <br>
+
   <div class="container">
 
-    <br>
-    <br>
-    <p>Low income areas which lack easy access to grocery stores are referred to as 'Food Deserts'. The USDA defines
-      food deserts as parts of the country that lack
-      healthy food, such as fresh fruit and vegetables. These areas are typically impoverished and have a lack of
-      grocery stores, farmers' markets and
-      healthy food providers. Approximately 23.5 million Americans live in food deserts. </p>
-    <p>The Institute for Local Self-Reliance's (ILSR) released a report in 2018 discussing how dollar stores are
-      targeting rural and and low-income neighborhoods
-      that satisy the characteristics of food deserts. This raises concerns because although dollar stores typically
-      sell milk and eggs, they do not sell fresh fruits or vegetables, or other nutrionally-dense food products. 
-      "This influx of dollar stores, according to the Oklahoma City city council, is a major public-health problem".
-      "While many factors influence what stores come and go in a neighborhood, research shows that convenience stores
-      persist where poverty does. Spelman College sociologist Ashanté Reese has also shown that food access aligns with
-      historical patterns of racial segregation. In low-income neighborhoods—and even more so in those that are
-      predominantly black—researchers have found that the number of convenience stores increases with poverty, while
-      supermarket availability decreases."
-      https://psmag.com/social-justice/to-save-a-neighborhood-ban-a-dollar-store</p>
+    <div class="row">
+      <div class="col-md-3">
+        <h3>Food Deserts</h3>
+        <p>Low income areas which lack easy access to grocery stores are referred to as 'Food Deserts'. The USDA defines
+          food deserts as parts of the country that lack
+          healthy food, such as fresh fruit and vegetables. These areas are typically impoverished and have a lack of
+          grocery stores, farmers' markets and
+          healthy food providers. Approximately 23.5 million Americans live in food deserts. </p>
+      </div>
+
+      <div class="col-md-1"></div>
+
+      <div class="col-md-3">
+        <h3> Dollar Stores</h3>
+        <p>The Institute for Local Self-Reliance's (ILSR) released a report in 2018 discussing how dollar stores are
+          targeting rural and and low-income neighborhoods that satisy the characteristics of food deserts. This raises
+          concerns because although dollar stores typically
+          sell milk and eggs, they do not sell fresh fruits or vegetables, or other nutrionally-dense food products.
+          "This influx of dollar stores, according to the Oklahoma City city council, is a major public-health problem".
+          "While many factors influence what stores come and go in a neighborhood, research shows that convenience
+          stores
+          persist where poverty does. Spelman College sociologist Ashanté Reese has also shown that food access aligns
+          with
+          historical patterns of racial segregation. In low-income neighborhoods—and even more so in those that are
+          predominantly black—researchers have found that the number of convenience stores increases with poverty, while
+          supermarket availability decreases."
+          https://psmag.com/social-justice/to-save-a-neighborhood-ban-a-dollar-store</p>
+      </div>
+      
+      <div class="col-md-1"></div>
+
+      <div class="col-md-3">
+        <h3>Grocery Stores</h3>
+      </div>
+    </div>
+
     <br>
     <br>
 
-    <p>This map's color scheme displays the percentage of people, by county, living in food deserts. 
+    <p>This map's color scheme displays the percentage of people, by county, living in food deserts.
       The darkest color represents the largest number of people living in food deserts. </p>
 
     <div class="row">
@@ -84,7 +106,7 @@
       <div class="col-md-1"></div>
     </div>
 
-    <p>The map, below, illustrates the number of dollar stores nationwide.   </p>
+    <p>The map, below, illustrates the number of dollar stores nationwide. </p>
 
     <div class="row">
       <div class="col-md-1"></div>
@@ -116,9 +138,11 @@
       <div class="col-md-1"></div>
     </div>
 
-    <p>Urban / Rural areas  ojadso fj  jfoisj aiomjsjfoi sjfopsjpo fspojfpo sposj fpjspdofjspoj fpsjpojdspofspofjpsojfposjpofjsfsd
-        ojadso fj  jfoisj aiomjsjfoi sjfopsjpo fspojfpo sposj fpjspdofjspoj fpsjpojdspofspofjpsojfposjpofjsfsdojadso fj  jfoisj aiomjsjfoi sjfopsjpo fspojfpo sposj fpjspdofjspoj fpsjpojdspofspofjpsojfposjpofjsfsd
-        ojadso fj  jfoisj aiomjsjfoi sjfopsjpo fspojfpo sposj fpjspdofjspoj fpsjpojdspofspofjpsojfposjpofjsfsd
+    <p>Urban / Rural areas ojadso fj jfoisj aiomjsjfoi sjfopsjpo fspojfpo sposj fpjspdofjspoj
+      fpsjpojdspofspofjpsojfposjpofjsfsd
+      ojadso fj jfoisj aiomjsjfoi sjfopsjpo fspojfpo sposj fpjspdofjspoj fpsjpojdspofspofjpsojfposjpofjsfsdojadso fj
+      jfoisj aiomjsjfoi sjfopsjpo fspojfpo sposj fpjspdofjspoj fpsjpojdspofspofjpsojfposjpofjsfsd
+      ojadso fj jfoisj aiomjsjfoi sjfopsjpo fspojfpo sposj fpjspdofjspoj fpsjpojdspofspofjpsojfposjpofjsfsd
     </p>
 
     <div class="row">
