--- a/StoresDollar/templates/index.html
+++ b/StoresDollar/templates/index.html
@@ -26,12 +26,11 @@
   </nav>
 
   <br>
-  <br>
 
   <div class="container">
 
     <div class="row">
-      <div class="col-md-3">
+      <div class="col-md-4">
         <h3>Food Deserts</h3>
         <p>Low income areas which lack easy access to grocery stores are referred to as 'Food Deserts'. The USDA defines
           food deserts as parts of the country that lack
@@ -40,15 +39,17 @@
           healthy food providers. Approximately 23.5 million Americans live in food deserts. </p>
       </div>
 
-      <div class="col-md-1"></div>
-
-      <div class="col-md-3">
+      <div class="col-md-4">
         <h3> Dollar Stores</h3>
         <p>The Institute for Local Self-Reliance's (ILSR) released a report in 2018 discussing how dollar stores are
           targeting rural and and low-income neighborhoods that satisy the characteristics of food deserts. This raises
-          concerns because although dollar stores typically
-          sell milk and eggs, they do not sell fresh fruits or vegetables, or other nutrionally-dense food products.
-          "This influx of dollar stores, according to the Oklahoma City city council, is a major public-health problem".
+          concerns because although dollar stores typically sell milk and eggs, they do not sell fresh fruits or vegetables, 
+          or other nutrionally-dense food products.
+      </div>
+
+      <div class="col-md-4">
+        <h3>Quotes</h3>
+        "This influx of dollar stores, according to the Oklahoma City city council, is a major public-health problem".
           "While many factors influence what stores come and go in a neighborhood, research shows that convenience
           stores
           persist where poverty does. Spelman College sociologist Ashanté Reese has also shown that food access aligns
@@ -58,15 +59,8 @@
           supermarket availability decreases."
           https://psmag.com/social-justice/to-save-a-neighborhood-ban-a-dollar-store</p>
       </div>
-      
-      <div class="col-md-1"></div>
-
-      <div class="col-md-3">
-        <h3>Grocery Stores</h3>
-      </div>
     </div>
 
-    <br>
     <br>
 
     <p>This map's color scheme displays the percentage of people, by county, living in food deserts.
