--- a/StoresDollar/templates/index.html
+++ b/StoresDollar/templates/index.html
@@ -43,28 +43,30 @@
         <h3> Dollar Stores</h3>
         <p>The Institute for Local Self-Reliance's (ILSR) released a report in 2018 discussing how dollar stores are
           targeting rural and and low-income neighborhoods that satisy the characteristics of food deserts. This raises
-          concerns because although dollar stores typically sell milk and eggs, they do not sell fresh fruits or vegetables, 
-          or other nutrionally-dense food products.
+          concerns because although dollar stores typically sell milk and eggs, they do not sell fresh fruits or
+          vegetables,
+          or other nutrionally-dense food products.</p>
       </div>
 
       <div class="col-md-4">
         <h3>Quotes</h3>
-        "This influx of dollar stores, according to the Oklahoma City city council, is a major public-health problem".
+        <p>"This influx of dollar stores, according to the Oklahoma City city council, is a major public-health
+          problem".
           "While many factors influence what stores come and go in a neighborhood, research shows that convenience
           stores
           persist where poverty does. Spelman College sociologist Ashanté Reese has also shown that food access aligns
           with
           historical patterns of racial segregation. In low-income neighborhoods—and even more so in those that are
           predominantly black—researchers have found that the number of convenience stores increases with poverty, while
-          supermarket availability decreases."
-          https://psmag.com/social-justice/to-save-a-neighborhood-ban-a-dollar-store</p>
+          supermarket availability decreases."</p>
+        <p>https://psmag.com/social-justice/to-save-a-neighborhood-ban-a-dollar-store</p>
       </div>
     </div>
 
     <br>
-
-    <p>This map's color scheme displays the percentage of people, by county, living in food deserts.
-      The darkest color represents the largest number of people living in food deserts. </p>
+    <h4>Food Desert Map</h4>
+    <p>This map's color scheme displays the percentage of people, by county, living in food deserts. The darkest color
+      represents the largest number of people living in food deserts. </p>
 
     <div class="row">
       <div class="col-md-1"></div>
@@ -100,7 +102,9 @@
       <div class="col-md-1"></div>
     </div>
 
-    <p>The map, below, illustrates the number of dollar stores nationwide. </p>
+    <br>
+    <h4>Dollar Store Map</h4>
+    <p>The map illustrates the number of dollar stores nationwide. </p>
 
     <div class="row">
       <div class="col-md-1"></div>
@@ -131,6 +135,8 @@
       </div>
       <div class="col-md-1"></div>
     </div>
+
+    <br>
 
     <p>Urban / Rural areas ojadso fj jfoisj aiomjsjfoi sjfopsjpo fspojfpo sposj fpjspdofjspoj
       fpsjpojdspofspofjpsojfposjpofjsfsd
