--- a/StoresDollar/templates/index.html
+++ b/StoresDollar/templates/index.html
@@ -176,17 +176,26 @@
       <div class="col-md-1"> </div>
     </div>
 
-    <form name="UrbanRuralDropdownList">
+    <br>
+    <h4>Urban / Rural Grocery Stores vs. Dollar Stores (Current and Predicted)</h4>
+    <p>The top 3 urban/rural counties with the highest number of people without access to fresh fruit and vegetables are
+      displayed.
+    </p>
+
+    <div class="row">
       Urban / Rural Selection
-      <select id="urb_rural" class="custom-select col-md-3" onchange="optionChanged(this.value)">
-        <option value="urban">Urban</option>
-        <option value="rural">Rural</option>
-      </select>
-    </form>
+      <form name="UrbanRuralDropdownList">
+        <select id="urb_rural" class="custom-select col-md-3" onchange="optionChanged(this.value)">
+          <option value="urban">Urban</option>
+          <option value="rural">Rural</option>
+        </select>
+      </form>
+    </div>
 </body>
 
 <script type="text/javascript" src="../static/js/app.js"></script>
 
+<br>
 <footer>
   <p style="font-size:.75em; color:#808080; text-align: center">Design & Developed by Bic Vu, Monica L., and Carol
     Fogel,
