--- a/StoresDollar/templates/index.html
+++ b/StoresDollar/templates/index.html
@@ -182,18 +182,11 @@
     </p>
 
     <div class="row">
-      Urban / Rural Selection
-      <br>
+      <p>Urban / Rural Selection</p>  
       <select id="urb_rural" class="custom-select col-md-3" onchange="optionChanged(this.value)">
         <option value="urban">Urban</option>
         <option value="rural">Rural</option>
       </select>
-      <!-- <form name="UrbanRuralDropdownList">
-        <select id="urb_rural" class="custom-select col-md-3" onchange="optionChanged(this.value)">
-          <option value="urban">Urban</option>
-          <option value="rural">Rural</option>
-        </select>
-      </form> -->
     </div>
 </body>
 
