--- a/StoresDollar/templates/index.html
+++ b/StoresDollar/templates/index.html
@@ -89,6 +89,31 @@
             <param name='display_overlay' value='yes' />
             <param name='display_count' value='yes' /></object>
         </div>
+        <div class='tableauPlaceholder' id='viz1565828331111' style='position: relative'><noscript><a href='#'><img
+                alt=' '
+                src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;FD&#47;FD_v1&#47;Sheet1&#47;1_rss.png'
+                style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
+            <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+            <param name='embed_code_version' value='3' />
+            <param name='site_root' value='' />
+            <param name='name' value='FD_v1&#47;Sheet1' />
+            <param name='tabs' value='no' />
+            <param name='toolbar' value='yes' />
+            <param name='static_image'
+              value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;FD&#47;FD_v1&#47;Sheet1&#47;1.png' />
+            <param name='animate_transition' value='yes' />
+            <param name='display_static_image' value='yes' />
+            <param name='display_spinner' value='yes' />
+            <param name='display_overlay' value='yes' />
+            <param name='display_count' value='yes' /></object></div>
+        <script type='text/javascript'>
+          var divElement = document.getElementById('viz1565828331111');
+          var vizElement = divElement.getElementsByTagName('object')[0];
+          vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
+          var scriptElement = document.createElement('script');
+          scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+          vizElement.parentNode.insertBefore(scriptElement, vizElement);                
+        </script>
         <script type='text/javascript'>
           var divElement = document.getElementById('viz1565658636814');
           var vizElement = divElement.getElementsByTagName('object')[0];
@@ -108,7 +133,7 @@
     <div class="row">
       <div class="col-md-1"></div>
       <div class="col-md-10">
-        <div class='tableauPlaceholder' id='viz1565658785362' style='position: relative'><noscript><a href='#'><img
+        <div class='tableauPlaceholder' id='viz1565828408501' style='position: relative'><noscript><a href='#'><img
                 alt=' '
                 src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;FD&#47;FD_v1&#47;Sheet2&#47;1_rss.png'
                 style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
@@ -126,76 +151,79 @@
             <param name='display_overlay' value='yes' />
             <param name='display_count' value='yes' /></object></div>
         <script type='text/javascript'>
-          var divElement = document.getElementById('viz1565658785362');
-          var vizElement = divElement.getElementsByTagName('object')[0]; vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
-          var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
-          vizElement.parentNode.insertBefore(scriptElement, vizElement); 
-        </script>
-      </div>
-      <div class="col-md-1"></div>
-    </div>
-
-    <br>
-    <h4>Urban / Rural Grocery Stores</h4>
-    <p>fj jfoisj aiomjsjfoi sjfopsjpo fspojfpo sposj fpjspdofjspoj
-      fpsjpojdspofspofjpsojfposjpofjsfsd
-      ojadso fj jfoisj aiomjsjfoi sjfopsjpo fspojfpo sposj fpjspdofjspoj fpsjpojdspofspofjpsojfposjpofjsfsdojadso fj
-      jfoisj aiomjsjfoi sjfopsjpo fspojfpo sposj fpjspdofjspoj fpsjpojdspofspofjpsojfposjpofjsfsd
-      ojadso fj jfoisj aiomjsjfoi sjfopsjpo fspojfpo sposj fpjspdofjspoj fpsjpojdspofspofjpsojfposjpofjsfsd
-    </p>
-
-    <div class="row">
-      <div class="col-md-1"> </div>
-      <div class="col-md-10">
-        <div class='tableauPlaceholder' id='viz1565789401491' style='position: relative'><noscript><a href='#'><img
-                alt=' '
-                src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Gr&#47;Grocery_UrbanRural&#47;Area_1000&#47;1_rss.png'
-                style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
-            <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
-            <param name='embed_code_version' value='3' />
-            <param name='site_root' value='' />
-            <param name='name' value='Grocery_UrbanRural&#47;Area_1000' />
-            <param name='tabs' value='no' />
-            <param name='toolbar' value='yes' />
-            <param name='static_image'
-              value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Gr&#47;Grocery_UrbanRural&#47;Area_1000&#47;1.png' />
-            <param name='animate_transition' value='yes' />
-            <param name='display_static_image' value='yes' />
-            <param name='display_spinner' value='yes' />
-            <param name='display_overlay' value='yes' />
-            <param name='display_count' value='yes' /></object></div>
-        <script type='text/javascript'>
-          var divElement = document.getElementById('viz1565789401491');
-          var vizElement = divElement.getElementsByTagName('object')[0]; vizElement.style.width = '100%';
-          vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
+          var divElement = document.getElementById('viz1565828408501');
+          var vizElement = divElement.getElementsByTagName('object')[0];
+          vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
           var scriptElement = document.createElement('script');
-          scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);  
+          scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+          vizElement.parentNode.insertBefore(scriptElement, vizElement);                
         </script>
+        <div class="col-md-1"></div>
       </div>
-      <div class="col-md-1"> </div>
-    </div>
 
-    <br>
-    <h4>Urban / Rural Grocery Stores vs. Dollar Stores (Current and Predicted)</h4>
-    <p>The top 3 urban / rural counties with the highest number of people without access to fresh fruit and vegetables are
-      displayed.
-    </p>
-
-    <div class="row">
-      <p>Urban / Rural Selection</p>  
       <br>
-      <select id="urb_rural" class="custom-select col-md-3" onchange="optionChanged(this.value)">
-        <option value="urban">Urban</option>
-        <option value="rural">Rural</option>
-      </select>
-    </div>
+      <h4>Urban / Rural Grocery Stores</h4>
+      <p>fj jfoisj aiomjsjfoi sjfopsjpo fspojfpo sposj fpjspdofjspoj
+        fpsjpojdspofspofjpsojfposjpofjsfsd
+        ojadso fj jfoisj aiomjsjfoi sjfopsjpo fspojfpo sposj fpjspdofjspoj fpsjpojdspofspofjpsojfposjpofjsfsdojadso fj
+        jfoisj aiomjsjfoi sjfopsjpo fspojfpo sposj fpjspdofjspoj fpsjpojdspofspofjpsojfposjpofjsfsd
+        ojadso fj jfoisj aiomjsjfoi sjfopsjpo fspojfpo sposj fpjspdofjspoj fpsjpojdspofspofjpsojfposjpofjsfsd
+      </p>
+
+      <div class="row">
+        <div class="col-md-1"> </div>
+        <div class="col-md-10">
+          <div class='tableauPlaceholder' id='viz1565789401491' style='position: relative'><noscript><a href='#'><img
+                  alt=' '
+                  src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Gr&#47;Grocery_UrbanRural&#47;Area_1000&#47;1_rss.png'
+                  style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
+              <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+              <param name='embed_code_version' value='3' />
+              <param name='site_root' value='' />
+              <param name='name' value='Grocery_UrbanRural&#47;Area_1000' />
+              <param name='tabs' value='no' />
+              <param name='toolbar' value='yes' />
+              <param name='static_image'
+                value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Gr&#47;Grocery_UrbanRural&#47;Area_1000&#47;1.png' />
+              <param name='animate_transition' value='yes' />
+              <param name='display_static_image' value='yes' />
+              <param name='display_spinner' value='yes' />
+              <param name='display_overlay' value='yes' />
+              <param name='display_count' value='yes' /></object></div>
+          <script type='text/javascript'>
+            var divElement = document.getElementById('viz1565789401491');
+            var vizElement = divElement.getElementsByTagName('object')[0]; vizElement.style.width = '100%';
+            vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
+            var scriptElement = document.createElement('script');
+            scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);  
+          </script>
+        </div>
+        <div class="col-md-1"> </div>
+      </div>
+
+      <br>
+      <h4>Urban / Rural Grocery Stores vs. Dollar Stores (Current and Predicted)</h4>
+      <p>The top 3 urban / rural counties with the highest number of people without access to fresh fruit and vegetables
+        are
+        displayed.
+      </p>
+
+      <div class="row">
+        <p>Urban / Rural Selection</p>
+        <br>
+        <select id="urb_rural" class="custom-select col-md-3" onchange="optionChanged(this.value)">
+          <option value="urban">Urban</option>
+          <option value="rural">Rural</option>
+        </select>
+      </div>
 </body>
 
 <script type="text/javascript" src="../static/js/app.js"></script>
 
 <br>
 <footer>
-  <p style="font-size:.75em; color:#808080; text-align: center">Design & Developed by Bic Vu, Monica L., and Carol
+  <p style="font-size:.75em; color:#808080; text-align: center">Design & Developed by Bic Vu, Monica Linsangan, and
+    Carol
     Fogel,
     2019.</p>
   <br>
