--- a/StoresDollar/templates/index.html
+++ b/StoresDollar/templates/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" href="../static/css/style.css">
 
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Project 3</title>
+  <title>Food Deserts</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 
@@ -30,7 +30,7 @@
 
     <div class="row">
       <div class="col-md-4">
-        <h3>Food Deserts</h3>
+        <h2>Food Deserts</h2>
         <p>Low income areas which lack easy access to grocery stores are referred to as 'Food Deserts'. The USDA defines
           food deserts as parts of the country that lack
           healthy food, such as fresh fruit and vegetables. These areas are typically impoverished and have a lack of
@@ -39,7 +39,7 @@
       </div>
 
       <div class="col-md-4">
-        <h3> Dollar Stores</h3>
+        <h2> Dollar Stores</h2>
         <p>The Institute for Local Self-Reliance's (ILSR) released a report in 2018 discussing how dollar stores are
           targeting rural and and low-income neighborhoods that satisy the characteristics of food deserts. This raises
           concerns because although dollar stores typically sell milk and eggs, they do not sell fresh fruits or
@@ -48,7 +48,7 @@
       </div>
 
       <div class="col-md-4">
-        <h3>Quotes</h3>
+        <h2>Quotes</h2>
         <p>"This influx of dollar stores, according to the Oklahoma City city council, is a major public-health
           problem".
           "While many factors influence what stores come and go in a neighborhood, research shows that convenience
@@ -63,7 +63,7 @@
     </div>
 
     <br>
-    <h4>Food Desert Map</h4>
+    <h2>Food Desert Map</h2>
     <p>This map's color scheme displays the percentage of people, by county, living in food deserts. The darkest color
       represents the largest number of people living in food deserts. </p>
 
@@ -102,7 +102,7 @@
     </div>
 
     <br>
-    <h4>Dollar Store Map</h4>
+    <h2>Dollar Store Map</h2>
     <p>The map illustrates the number of dollar stores nationwide. </p>
 
     <div class="row">
@@ -136,7 +136,7 @@
     </div>
 
     <br>
-    <h4>Urban / Rural Grocery Stores</h4>
+    <h2>Urban / Rural Grocery Stores</h2>
     <p>fj jfoisj aiomjsjfoi sjfopsjpo fspojfpo sposj fpjspdofjspoj
       fpsjpojdspofspofjpsojfposjpofjsfsd
       ojadso fj jfoisj aiomjsjfoi sjfopsjpo fspojfpo sposj fpjspdofjspoj fpsjpojdspofspofjpsojfposjpofjsfsdojadso fj
@@ -176,14 +176,12 @@
     </div>
 
     <br>
-    <h4>Urban / Rural Grocery Stores vs. Dollar Stores (Current and Predicted)</h4>
-    <p>The top 3 urban / rural counties with the highest number of people without access to fresh fruit and vegetables
-      are
-      displayed.
+    <h2>Urban / Rural Grocery Stores vs. Dollar Stores (Current and Predicted)</h2>
+    <p>The top 3 urban / rural counties with the highest number of people without access to fresh fruit and vegetables are displayed.
     </p>
 
     <div class="row">
-      <p>Urban / Rural Selection</p>
+      <p>Urban / Rural Selection  </p>
       <br>
       <select id="urb_rural" class="custom-select col-md-3" onchange="optionChanged(this.value)">
         <option value="urban">Urban</option>
@@ -196,10 +194,7 @@
 
 <br>
 <footer>
-  <p style="font-size:.75em; color:#808080; text-align: center">Design & Developed by Bic Vu, Monica Linsangan, and
-    Carol
-    Fogel,
-    2019.</p>
+  <p style="font-size:.75em; color:#808080; text-align: center">Design & Developed by Bic Vu, Monica Linsangan, and Carol Fogel, 2019.</p>
   <br>
 </footer>
 
