--- a/StoresDollar/templates/index.html
+++ b/StoresDollar/templates/index.html
@@ -108,28 +108,32 @@
     <div class="row">
       <div class="col-md-1"></div>
       <div class="col-md-10">
-        <div class='tableauPlaceholder' id='viz1565658785362' style='position: relative'><noscript><a href='#'><img
+        <div class='tableauPlaceholder' id='viz1565920836892' style='position: relative'><noscript><a href='#'><img
                 alt=' '
-                src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;FD&#47;FD_v1&#47;Sheet2&#47;1_rss.png'
+                src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresGrowth&#47;Dashboard1&#47;1_rss.png'
                 style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
             <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
             <param name='embed_code_version' value='3' />
             <param name='site_root' value='' />
-            <param name='name' value='FD_v1&#47;Sheet2' />
+            <param name='name' value='DollarStoresGrowth&#47;Dashboard1' />
             <param name='tabs' value='no' />
             <param name='toolbar' value='yes' />
             <param name='static_image'
-              value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;FD&#47;FD_v1&#47;Sheet2&#47;1.png' />
+              value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresGrowth&#47;Dashboard1&#47;1.png' />
             <param name='animate_transition' value='yes' />
             <param name='display_static_image' value='yes' />
             <param name='display_spinner' value='yes' />
             <param name='display_overlay' value='yes' />
-            <param name='display_count' value='yes' /></object></div>
+            <param name='display_count' value='yes' />
+            <param name='filter' value='publish=yes' /></object></div>
         <script type='text/javascript'>
-          var divElement = document.getElementById('viz1565658785362');
-          var vizElement = divElement.getElementsByTagName('object')[0]; vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
+          var divElement = document.getElementById('viz1565920836892');
+          var vizElement = divElement.getElementsByTagName('object')[0];
+          vizElement.style.minWidth = '720px'; vizElement.style.maxWidth = '920px'; vizElement.style.width = '100%';
+          vizElement.style.minHeight = '287px'; vizElement.style.maxHeight = '687px';
+          vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
           var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
-          vizElement.parentNode.insertBefore(scriptElement, vizElement); 
+          vizElement.parentNode.insertBefore(scriptElement, vizElement);             
         </script>
       </div>
       <div class="col-md-1"></div>
@@ -177,11 +181,12 @@
 
     <br>
     <h2>Urban / Rural Grocery Stores vs. Dollar Stores (Current and Predicted)</h2>
-    <p>The top 3 urban / rural counties with the highest number of people without access to fresh fruit and vegetables are displayed.
+    <p>The top 3 urban / rural counties with the highest number of people without access to fresh fruit and vegetables
+      are displayed.
     </p>
 
     <div class="row">
-      <p>Urban / Rural Selection  </p>
+      <p>Urban / Rural Selection </p>
       <br>
       <select id="urb_rural" class="custom-select col-md-3" onchange="optionChanged(this.value)">
         <option value="urban">Urban</option>
@@ -194,7 +199,8 @@
 
 <br>
 <footer>
-  <p style="font-size:.75em; color:#808080; text-align: center">Design & Developed by Bic Vu, Monica Linsangan, and Carol Fogel, 2019.</p>
+  <p style="font-size:.75em; color:#808080; text-align: center">Design & Developed by Bic Vu, Monica Linsangan, and
+    Carol Fogel, 2019.</p>
   <br>
 </footer>
 
