--- a/StoresDollar/templates/index.html
+++ b/StoresDollar/templates/index.html
@@ -102,97 +102,129 @@
     </div>
 
     <br>
+
+    <br>
     <h2>Dollar Store Map</h2>
-    <p>The map illustrates the number of dollar stores nationwide. </p>
-
-    <div class="row">
-      <div class="col-md-1"></div>
-      <div class="col-md-10">
-        <div class='tableauPlaceholder' id='viz1565920836892' style='position: relative'><noscript><a href='#'><img
-                alt=' '
-                src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresGrowth&#47;Dashboard1&#47;1_rss.png'
-                style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
-            <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
-            <param name='embed_code_version' value='3' />
-            <param name='site_root' value='' />
-            <param name='name' value='DollarStoresGrowth&#47;Dashboard1' />
-            <param name='tabs' value='no' />
-            <param name='toolbar' value='yes' />
-            <param name='static_image'
-              value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresGrowth&#47;Dashboard1&#47;1.png' />
-            <param name='animate_transition' value='yes' />
-            <param name='display_static_image' value='yes' />
-            <param name='display_spinner' value='yes' />
-            <param name='display_overlay' value='yes' />
-            <param name='display_count' value='yes' />
-            <param name='filter' value='publish=yes' /></object></div>
-        <script type='text/javascript'>
-          var divElement = document.getElementById('viz1565920836892');
-          var vizElement = divElement.getElementsByTagName('object')[0];
-          vizElement.style.minWidth = '720px'; vizElement.style.maxWidth = '920px'; vizElement.style.width = '100%';
-          vizElement.style.minHeight = '287px'; vizElement.style.maxHeight = '687px';
-          vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
-          var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
-          vizElement.parentNode.insertBefore(scriptElement, vizElement);             
-        </script>
+    <p>
+      <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-10">
+          <div class='tableauPlaceholder' id='viz1565917936397' style='position: relative'><noscript><a href='#'><img
+                  alt=' '
+                  src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;FD&#47;FD_v1&#47;FoodDesertUSAMap&#47;1_rss.png'
+                  style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
+              <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+              <param name='embed_code_version' value='3' />
+              <param name='site_root' value='' />
+              <param name='name' value='FD_v1&#47;FoodDesertUSAMap' />
+              <param name='tabs' value='no' />
+              <param name='toolbar' value='yes' />
+              <param name='static_image'
+                value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;FD&#47;FD_v1&#47;FoodDesertUSAMap&#47;1.png' />
+              <param name='animate_transition' value='yes' />
+              <param name='display_static_image' value='yes' />
+              <param name='display_spinner' value='yes' />
+              <param name='display_overlay' value='yes' />
+              <param name='display_count' value='yes' />
+              <param name='filter' value='publish=yes' /></object></div>
+          <script
+            type='text/javascript'>                    var divElement = document.getElementById('viz1565917936397'); var vizElement = divElement.getElementsByTagName('object')[0]; vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+        </div>
       </div>
-      <div class="col-md-1"></div>
-    </div>
 
-    <br>
-    <h2>Urban / Rural Grocery Stores</h2>
-    <p>fj jfoisj aiomjsjfoi sjfopsjpo fspojfpo sposj fpjspdofjspoj
-      fpsjpojdspofspofjpsojfposjpofjsfsd
-      ojadso fj jfoisj aiomjsjfoi sjfopsjpo fspojfpo sposj fpjspdofjspoj fpsjpojdspofspofjpsojfposjpofjsfsdojadso fj
-      jfoisj aiomjsjfoi sjfopsjpo fspojfpo sposj fpjspdofjspoj fpsjpojdspofspofjpsojfposjpofjsfsd
-      ojadso fj jfoisj aiomjsjfoi sjfopsjpo fspojfpo sposj fpjspdofjspoj fpsjpojdspofspofjpsojfposjpofjsfsd
-    </p>
-
-    <div class="row">
-      <div class="col-md-1"> </div>
-      <div class="col-md-10">
-        <div class='tableauPlaceholder' id='viz1565789401491' style='position: relative'><noscript><a href='#'><img
-                alt=' '
-                src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Gr&#47;Grocery_UrbanRural&#47;Area_1000&#47;1_rss.png'
-                style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
-            <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
-            <param name='embed_code_version' value='3' />
-            <param name='site_root' value='' />
-            <param name='name' value='Grocery_UrbanRural&#47;Area_1000' />
-            <param name='tabs' value='no' />
-            <param name='toolbar' value='yes' />
-            <param name='static_image'
-              value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Gr&#47;Grocery_UrbanRural&#47;Area_1000&#47;1.png' />
-            <param name='animate_transition' value='yes' />
-            <param name='display_static_image' value='yes' />
-            <param name='display_spinner' value='yes' />
-            <param name='display_overlay' value='yes' />
-            <param name='display_count' value='yes' /></object></div>
-        <script type='text/javascript'>
-          var divElement = document.getElementById('viz1565789401491');
-          var vizElement = divElement.getElementsByTagName('object')[0]; vizElement.style.width = '100%';
-          vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
-          var scriptElement = document.createElement('script');
-          scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);  
-        </script>
-      </div>
-      <div class="col-md-1"> </div>
-    </div>
-
-    <br>
-    <h2>Urban / Rural Grocery Stores vs. Dollar Stores (Current and Predicted)</h2>
-    <p>The top 3 urban / rural counties with the highest number of people without access to fresh fruit and vegetables
-      are displayed.
-    </p>
-
-    <div class="row">
-      <p>Urban / Rural Selection </p>
       <br>
-      <select id="urb_rural" class="custom-select col-md-3" onchange="optionChanged(this.value)">
-        <option value="urban">Urban</option>
-        <option value="rural">Rural</option>
-      </select>
-    </div>
+
+      <h2>Dollar Store Trends</h2>
+      <p>The map illustrates the number of dollar stores nationwide. </p>
+
+      <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-10">
+          <div class='tableauPlaceholder' id='viz1565920836892' style='position: relative'><noscript><a href='#'><img
+                  alt=' '
+                  src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresGrowth&#47;Dashboard1&#47;1_rss.png'
+                  style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
+              <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+              <param name='embed_code_version' value='3' />
+              <param name='site_root' value='' />
+              <param name='name' value='DollarStoresGrowth&#47;Dashboard1' />
+              <param name='tabs' value='no' />
+              <param name='toolbar' value='yes' />
+              <param name='static_image'
+                value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresGrowth&#47;Dashboard1&#47;1.png' />
+              <param name='animate_transition' value='yes' />
+              <param name='display_static_image' value='yes' />
+              <param name='display_spinner' value='yes' />
+              <param name='display_overlay' value='yes' />
+              <param name='display_count' value='yes' />
+              <param name='filter' value='publish=yes' /></object></div>
+          <script type='text/javascript'>
+            var divElement = document.getElementById('viz1565920836892');
+            var vizElement = divElement.getElementsByTagName('object')[0];
+            vizElement.style.minWidth = '720px'; vizElement.style.maxWidth = '920px'; vizElement.style.width = '100%';
+            vizElement.style.minHeight = '287px'; vizElement.style.maxHeight = '687px';
+            vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
+            var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+            vizElement.parentNode.insertBefore(scriptElement, vizElement);             
+          </script>
+        </div>
+        <div class="col-md-1"></div>
+      </div>
+
+      <br>
+      <h2>Urban / Rural Grocery Stores</h2>
+      <p>fj jfoisj aiomjsjfoi sjfopsjpo fspojfpo sposj fpjspdofjspoj
+        fpsjpojdspofspofjpsojfposjpofjsfsd
+        ojadso fj jfoisj aiomjsjfoi sjfopsjpo fspojfpo sposj fpjspdofjspoj fpsjpojdspofspofjpsojfposjpofjsfsdojadso fj
+        jfoisj aiomjsjfoi sjfopsjpo fspojfpo sposj fpjspdofjspoj fpsjpojdspofspofjpsojfposjpofjsfsd
+        ojadso fj jfoisj aiomjsjfoi sjfopsjpo fspojfpo sposj fpjspdofjspoj fpsjpojdspofspofjpsojfposjpofjsfsd
+      </p>
+
+      <div class="row">
+        <div class="col-md-1"> </div>
+        <div class="col-md-10">
+          <div class='tableauPlaceholder' id='viz1565789401491' style='position: relative'><noscript><a href='#'><img
+                  alt=' '
+                  src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Gr&#47;Grocery_UrbanRural&#47;Area_1000&#47;1_rss.png'
+                  style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
+              <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+              <param name='embed_code_version' value='3' />
+              <param name='site_root' value='' />
+              <param name='name' value='Grocery_UrbanRural&#47;Area_1000' />
+              <param name='tabs' value='no' />
+              <param name='toolbar' value='yes' />
+              <param name='static_image'
+                value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Gr&#47;Grocery_UrbanRural&#47;Area_1000&#47;1.png' />
+              <param name='animate_transition' value='yes' />
+              <param name='display_static_image' value='yes' />
+              <param name='display_spinner' value='yes' />
+              <param name='display_overlay' value='yes' />
+              <param name='display_count' value='yes' /></object></div>
+          <script type='text/javascript'>
+            var divElement = document.getElementById('viz1565789401491');
+            var vizElement = divElement.getElementsByTagName('object')[0]; vizElement.style.width = '100%';
+            vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
+            var scriptElement = document.createElement('script');
+            scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);  
+          </script>
+        </div>
+        <div class="col-md-1"> </div>
+      </div>
+
+      <br>
+      <h2>Urban / Rural Grocery Stores vs. Dollar Stores (Current and Predicted)</h2>
+      <p>The top 3 urban / rural counties with the highest number of people without access to fresh fruit and vegetables
+        are displayed.
+      </p>
+
+      <div class="row">
+        <p>Urban / Rural Selection </p>
+        <br>
+        <select id="urb_rural" class="custom-select col-md-3" onchange="optionChanged(this.value)">
+          <option value="urban">Urban</option>
+          <option value="rural">Rural</option>
+        </select>
+      </div>
 </body>
 
 <script type="text/javascript" src="../static/js/app.js"></script>
