--- a/StoresDollar/templates/index.html
+++ b/StoresDollar/templates/index.html
@@ -26,7 +26,7 @@
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
   <!-- Custom styles for this template -->
-  <!-- <link href="css/agency.min.css" rel="stylesheet"> -->
+  <link rel="stylesheet" href="../static/css/theme.min.css">
 
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Food Deserts</title>
