--- a/StoresDollar/templates/index.html
+++ b/StoresDollar/templates/index.html
@@ -3,7 +3,11 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>Food Deserts</title>
 
   <!-- Our original css files and links -->
   <!-- <link rel="stylesheet" href="https://use.typekit.net/fwf7daa.css">
@@ -15,21 +19,18 @@
 
 
   <!-- Bootstrap core CSS -->
-  <link href="../static/css/theme.bootstrap.min.css" rel="stylesheet">
+  <link href="../static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom fonts for this template -->
-  <link href="../static/css/theme.all.min.css" rel="stylesheet" type="text/css">
+  <link href="../static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet'
-    type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
   <!-- Custom styles for this template -->
-  <link rel="stylesheet" href="../static/css/theme.min.css">
+  <link href="../static/css/agency.min.css" rel="stylesheet">
 
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Food Deserts</title>
 </head>
 
 <body id="page-top">
@@ -103,7 +104,7 @@
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
+            <i class="fas fa-dollar-sign fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Dollar Stores</h4>
           <p class="text-muted">The Institute for Local Self-Reliance's (ILSR) released a report in 2018 discussing how
@@ -117,7 +118,7 @@
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
+            <i class="fas fa-quote-left fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Quotes</h4>
           <p class="text-muted">"This influx of dollar stores, according to the Oklahoma City city council, is a major
