--- a/StoresDollar/templates/index.html
+++ b/StoresDollar/templates/index.html
@@ -48,13 +48,13 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#background">Background</a>
+            <a style="color:black;" class="nav-link js-scroll-trigger" href="#background">Background</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolio">Maps</a>
+            <a style="color:black;" class="nav-link js-scroll-trigger" href="#portfolio">Maps</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">Analysis</a>
+            <a style="color:black;" class="nav-link js-scroll-trigger" href="#about">Analysis</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#team">Team</a>
@@ -72,7 +72,7 @@
     <div class="container">
       <div class="intro-text">
         <!-- <div class="intro-lead-in">US Food Deserts - Dollar / Grocery Stores</div> -->
-        <div class="intro-heading text-uppercase">US Food Deserts - Dollar / Grocery Stores</div>
+        <div style="color:black;" class="intro-heading text-uppercase">US Food Deserts - Dollar / Grocery Stores</div>
         <!-- <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a> -->
       </div>
     </div>
